# github-get-secrets-from-azure-kv-and-configure-as-repo-secrets

./: README.md  create_repo_secrets.py  encrypt_using_libnacl.py  get_repo_public_key.py  kv_values.py  list_repos.py  main.py  pyproject.toml  resource_graph_query.py
.github/: dependabot.yml
.github/workflows/: github-secrets-configuration-from-azure-keyvault.yaml  simple-az-check-secret.yaml
